week 04: fixed malfunction on iphone

--- a/web3_week_04/scss/small_screen.scss
+++ b/web3_week_04/scss/small_screen.scss
@@ -16,7 +16,7 @@ article {
 }
 
 nav {
-	//display: block;
+	display: block;
 	position: static;
 	padding: 10px 0px 10px 0px;
 }
@@ -30,12 +30,9 @@ nav a {
 }
 
 .img_container {
-	
-	img {
 
 	display: none;
 
-	}
 }
 
 footer { 
